--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.tela_simples">
+    package="com.example.projeto_mobile">
    <application
-        android:label="tela_simples"
+        android:label="projeto_mobile"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
